# g729

./: CMakeLists.txt  README.md  g729a_ipp_interface.c  g729a_ipp_interface.h  ippdefs.h  ipps.h  ippsc.h
ipp_libs/: libippsce9.so.8.0  libippscy8.so.8.0  libippvm.so.8.0  libippvmy8.so.8.0
